small fixes home picture loads in production add to cart button in product card covers bottom section when product titles are short prevent side scrolling in cards by cropping title strings change how css class names are generated in production

--- a/react/shopping-cart/src/components/styles/ProductCard.module.css
+++ b/react/shopping-cart/src/components/styles/ProductCard.module.css
@@ -4,6 +4,9 @@
   overflow-block: hidden;
   background-color: var(--dark);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+
+  display: flex;
+  flex-direction: column;
 }
 
 .top {
@@ -19,6 +22,7 @@
 }
 
 .bottom {
+  flex: 1;
   color: var(--white);
   display: flex;
 }
